--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -1,2 +1,118 @@
+<div style="margin-top: 25px;">
+    <div class="table-responsive">
+        <div>
+            <ul class="nav">
+                <li class="nav-item">
+                    <h2>List of Stars</h2>
+                </li>
+                <li class="nav-item" style="margin-left: auto; margin-top:10px;">
+                    <button class="btn btn-info" type="button" aria-haspopup="true" aria-expanded="false">New Star</button>
+                </li>
+            </ul>
+        </div>
+        <table class="table table-striped table-bordeless" id="idTablePlanet">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Density</th>
+                    <th scope="col" style="text-align: right;">Actions</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td style="text-align: center"><button class="btn btn-success" type="button" aria-haspopup="true"
+                            aria-expanded="false">Edit</button></td>
+                    <td style="text-align: center"><button class="btn btn-danger" type="button" aria-haspopup="true"
+                            aria-expanded="false">Delete</button></td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td style="text-align: center"><button class="btn btn-success" type="button" aria-haspopup="true"
+                            aria-expanded="false">Edit</button></td>
+                    <td style="text-align: center"><button class="btn btn-danger" type="button" aria-haspopup="true"
+                            aria-expanded="false">Delete</button></td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Larry</td>
+                    <td>the Bird</td>
+                    <td style="text-align: center">
+                        <button class="btn btn-success" type="button" aria-haspopup="true"
+                            aria-expanded="false">Edit</button>
+                    </td>
+                    <td style="text-align: center">
+                        <button class="btn btn-danger" type="button" aria-haspopup="true"
+                            aria-expanded="false">Delete</button>
+                    </td>
 
-hola hom
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="table-responsive" style="margin-top: 100px;">
+        <div>
+            <ul class="nav">
+                <li class="nav-item">
+                    <h2>List of Stars</h2>
+                </li>
+                <li class="nav-item" style="margin-left: auto; margin-top:10px;">
+                    <button class="btn btn-info" type="button" aria-haspopup="true" aria-expanded="false">New
+                        Star</button>
+                </li>
+            </ul>
+        </div>
+        <table class="table table-striped table-bordeless" id="idTableStar">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Density</th>
+                    <th scope="col" style="text-align: right;">Actions</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td style="text-align: center"><button class="btn btn-success" type="button" aria-haspopup="true"
+                            aria-expanded="false">Edit</button></td>
+                    <td style="text-align: center"><button class="btn btn-danger" type="button" aria-haspopup="true"
+                            aria-expanded="false">Delete</button></td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td style="text-align: center"><button class="btn btn-success" type="button" aria-haspopup="true"
+                            aria-expanded="false">Edit</button></td>
+                    <td style="text-align: center"><button class="btn btn-danger" type="button" aria-haspopup="true"
+                            aria-expanded="false">Delete</button></td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Larry</td>
+                    <td>the Bird</td>
+                    <td style="text-align: center">
+                        <button class="btn btn-success" type="button" aria-haspopup="true"
+                            aria-expanded="false">Edit</button>
+                    </td>
+                    <td style="text-align: center">
+                        <button class="btn btn-danger" type="button" aria-haspopup="true"
+                            aria-expanded="false">Delete</button>
+                    </td>
+
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
