--- a/Frontend/src/app/components/add-star/add-star.component.html
+++ b/Frontend/src/app/components/add-star/add-star.component.html
@@ -1,6 +1,9 @@
-<form style="margin-top:15px;">
+<form role="form" style="margin-top:15px;">
   <h2>Star</h2>
-  <div class="form-group" style="margin-top: 25px;">
+  <div class="form-group" style="margin-top:25px;">
+    <h5><label class="" *ngIf = "star != null">Id: {{star.id}}</label></h5>
+  </div>
+  <div class="form-group">
     <label for="FormControlInputName">Name</label>
     <input type="text" class="form-control" id="FormControlInputName" placeholder="Name Star">
   </div>
@@ -8,16 +11,6 @@
     <label for="FormControlInputDensity">Density</label>
     <input type="text" class="form-control" id="FormControlInputDensity" placeholder="Density Star">
   </div>
-  <div class="form-group">
-    <label for="FormControlSelectPlanets">Select Planets</label>
-    <select  class="form-control"  multiple="multiple" id="FormControlSelectPlanets">
-      <option value="cheese">Cheese</option>
-      <option value="tomatoes">Tomatoes</option>
-      <option value="mozarella">Mozzarella</option>
-      <option value="mushrooms">Mushrooms</option>
-      <option value="pepperoni">sa</option>
-      <option value="onions">Onions</option>
-    </select>
-  </div>
+
   <button type="submit" class="btn btn-primary">Confirm</button>
 </form>
