--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -6,8 +6,7 @@
                     <h2>List of Planet</h2>
                 </li>
                 <li class="nav-item" style="margin-left: auto; margin-top:10px;">
-                    <button class="btn btn-info" type="button" aria-haspopup="true" aria-expanded="false">New
-                        Star</button>
+                    <button class="btn btn-info" type="button" aria-haspopup="true" aria-expanded="false">New Planet</button>
                 </li>
             </ul>
         </div>
@@ -29,7 +28,7 @@
                     <td>{{planet.size}}</td>
                     <td>vacio</td>
                     <td style="text-align: center"><button class="btn btn-success" type="button" aria-haspopup="true" aria-expanded="false">Edit</button></td>
-                    <td style="text-align: center"><button class="btn btn-danger" type="button" aria-haspopup="true" aria-expanded="false">Delete</button></td>
+                    <td style="text-align: center"><button class="btn btn-danger" type="button" aria-haspopup="true" aria-expanded="false" (click) = "deletePlanet(planet.id)">Delete</button></td>
                 </tr>
             </tbody>
         </table>
@@ -42,8 +41,7 @@
                     <h2>List of Stars</h2>
                 </li>
                 <li class="nav-item" style="margin-left: auto; margin-top:10px;">
-                    <button class="btn btn-info" type="button" aria-haspopup="true" aria-expanded="false">New
-                        Star</button>
+                    <button class="btn btn-info" type="button" aria-haspopup="true" aria-expanded="false">New Star</button>
                 </li>
             </ul>
         </div>
@@ -63,7 +61,7 @@
                     <td>{{star.name}}</td>
                     <td>{{star.density}}</td>
                     <td style="text-align: center"><button class="btn btn-success" type="button" aria-haspopup="true" aria-expanded="false">Edit</button></td>
-                    <td style="text-align: center"><button class="btn btn-danger" type="button" aria-haspopup="true" aria-expanded="false">Delete</button></td>
+                    <td style="text-align: center"><button class="btn btn-danger" type="button" aria-haspopup="true" aria-expanded="false" (click) = "deleteStar(star.id)">Delete</button></td>
                 </tr>
             </tbody>
         </table>
