--- a/Frontend/src/app/components/add-planet/add-planet.component.html
+++ b/Frontend/src/app/components/add-planet/add-planet.component.html
@@ -1,21 +1,22 @@
 <form style="margin-top: 15px;">
     <h2>Planet</h2>
     <div class="form-group" style="margin-top:25px;">
-        <h5><label class="" *ngIf = "planet != null">Id: {{planet.id}}</label></h5>
+        <h5><label class="" *ngIf = "planet.id != null">Id: {{planet.id}}</label></h5>
       </div>
     <div class="form-group">
         <label for="FormControlInputName">Name</label>
-        <input type="text" class="form-control" id="FormControlInputName" placeholder="Name Planet">
+        <input [(ngModel)] = "planet.name" [ngModelOptions]="{standalone: true}" type="text" maxlength="15" class="form-control" id="FormControlInputName" placeholder="Name Planet">
     </div>
     <div class="form-group">
         <label for="FormControlInputSize">Size</label>
-        <input type="text" class="form-control" id="FormControlInputSize" placeholder="Size Planet">
+        <input [(ngModel)] ="planet.size" [ngModelOptions]="{standalone: true}" type="number" class="form-control" id="FormControlInputSize" placeholder="Size Planet">
     </div>
     <div class="form-group">
         <label for="FormControlSelectStar">Select Star</label>
-        <select class="form-control" id="FormControlSelectStar">
-            <option *ngFor = "let star of stars, let i = index" value={{star.id}}>{{star.name}}</option>
+        <select class="form-control" id="FormControlSelectStar" [(ngModel)]="starSelect" [ngModelOptions]="{standalone: true}" >
+            <option value="">Select Star</option>
+            <option *ngFor = "let star of stars, let i = index" [ngValue]="star">{{star.name}}</option>
         </select>
     </div>
-    <button type="submit" class="btn btn-primary">Confirm</button>
+    <button type="submit" class="btn btn-primary" (click) = confirmar()>Confirm</button>
 </form>
