--- a/Frontend/src/app/components/add-star/add-star.component.html
+++ b/Frontend/src/app/components/add-star/add-star.component.html
@@ -1,16 +1,15 @@
 <form role="form" style="margin-top:15px;">
   <h2>Star</h2>
   <div class="form-group" style="margin-top:25px;">
-    <h5><label class="" *ngIf = "star != null">Id: {{star.id}}</label></h5>
+    <h5><label class="" *ngIf = "star.id != null">Id: {{star.id}}</label></h5>
   </div>
   <div class="form-group">
     <label for="FormControlInputName">Name</label>
-    <input type="text" class="form-control" id="FormControlInputName" placeholder="Name Star">
+    <input [(ngModel)] = "star.name" [ngModelOptions]="{standalone: true}" type="text" maxlength="15" class="form-control" id="FormControlInputName" placeholder="Name Star">
   </div>
   <div class="form-group">
     <label for="FormControlInputDensity">Density</label>
-    <input type="text" class="form-control" id="FormControlInputDensity" placeholder="Density Star">
+    <input [(ngModel)] = "star.density" [ngModelOptions]="{standalone: true}" type="number" class="form-control" id="FormControlInputDensity" placeholder="Density Star">
   </div>
-
-  <button type="submit" class="btn btn-primary">Confirm</button>
+  <button type="submit" class="btn btn-primary" (click) = confirmar()>Confirm</button>
 </form>
