--- a/Frontend/src/app/components/add-planet/add-planet.component.html
+++ b/Frontend/src/app/components/add-planet/add-planet.component.html
@@ -1,5 +1,5 @@
 <form style="margin-top: 15px;">
-    <h2>Planet</h2>
+    <h2><span class="badge badge-none">Planet</span></h2>
     <div class="form-group" style="margin-top:25px;">
         <h5><label class="" *ngIf = "planet.id != null">Id: {{planet.id}}</label></h5>
       </div>
@@ -13,10 +13,13 @@
     </div>
     <div class="form-group">
         <label for="FormControlSelectStar">Select Star</label>
-        <select class="form-control" id="FormControlSelectStar" [(ngModel)]="starSelect" [ngModelOptions]="{standalone: true}" >
-            <option value="">Select Star</option>
+        <select [(ngModel)]="planet.dTO_Star" class="form-control" id="FormControlSelectStar"  name="selectStar">
+            <option *ngIf="planet.id != null" [ngValue]="planet.dTO_Star" selected disabled hidden>{{planet.dTO_Star.name}}</option>
             <option *ngFor = "let star of stars, let i = index" [ngValue]="star">{{star.name}}</option>
         </select>
     </div>
-    <button type="submit" class="btn btn-primary" (click) = confirmar()>Confirm</button>
+    <div>
+        <button type="submit" class="btn btn-primary" (click) = confirmar()>Confirm</button>
+        <button type="submit" class="btn btn-success" [routerLink] = "['/list-planet']" >volver</button>
+    </div>
 </form>
