--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -1,69 +1,6 @@
-<div style="margin-top: 25px;">
-    <div class="table-responsive">
-        <div>
-            <ul class="nav">
-                <li class="nav-item">
-                    <h2>List of Planet</h2>
-                </li>
-                <li class="nav-item" style="margin-left: auto; margin-top:10px;">
-                    <button class="btn btn-info" type="button" aria-haspopup="true" aria-expanded="false" [routerLink]="['/add-planet/0']">New Planet</button>
-                </li>
-            </ul>
-        </div>
-        <table class="table table-striped table-bordeless" id="idTablePlanet">
-            <thead class="thead-dark">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Density</th>
-                    <th scope="col">Star</th>
-                    <th scope="col" style="text-align: right;">Actions</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let planet of planets, let i = index">
-                    <th scope="row">{{planet.id}}</th>
-                    <td>{{planet.name}}</td>
-                    <td>{{planet.size}}</td>
-                    <td>vacio</td>
-                    <td style="text-align: center"><button class="btn btn-success" type="button" aria-haspopup="true" aria-expanded="false"[routerLink] = "['/add-planet/'+planet.id]">Edit</button></td>
-                    <td style="text-align: center"><button class="btn btn-danger" type="button" aria-haspopup="true" aria-expanded="false" (click) = "deletePlanet(planet.id)">Delete</button></td>
-                </tr>
-            </tbody>
-        </table>
+<div class = "main">
+    <div class = "title">
+        <h2><span class="badge badge-light">Home</span></h2>
     </div>
 
-    <div class="table-responsive" style="margin-top: 100px;">
-        <div>
-            <ul class="nav">
-                <li class="nav-item">
-                    <h2>List of Stars</h2>
-                </li>
-                <li class="nav-item" style="margin-left: auto; margin-top:10px;">
-                    <button class="btn btn-info" type="button" aria-haspopup="true" aria-expanded="false" [routerLink]="['/add-star/0']">New Star</button>
-                </li>
-            </ul>
-        </div>
-        <table class="table table-striped table-bordeless" id="idTableStar">
-            <thead class="thead-dark">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Density</th>
-                    <th scope="col" style="text-align: right;">Actions</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let star of stars, let i = index">
-                    <th scope="row">{{star.id}}</th>
-                    <td>{{star.name}}</td>
-                    <td>{{star.density}}</td>
-                    <td style="text-align: center"><button class="btn btn-success" type="button" aria-haspopup="true" aria-expanded="false"[routerLink] = "['/add-star/'+star.id]">Edit</button></td>
-                    <td style="text-align: center"><button class="btn btn-danger" type="button" aria-haspopup="true" aria-expanded="false" (click) = "deleteStar(star.id)">Delete</button></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
 </div>
