--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class = "main">
     <div class = "title">
-        <h2><span class="badge badge-light">Home</span></h2>
+        <h1><span class="badge badge-none" style="color: white">The Planets</span></h1>
     </div>
 
 </div>
