--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -2,3 +2,9 @@ html, body{
     margin: 0%;
     padding: 0%;
 }
+
+body{
+    background-image: url(./assets/imagenes/fondo2.jpg);
+    background-size: 100% 100%;
+    background-attachment: fixed;
+}
