Frontend: pequeñas modificaciones _ Backend: Test Unitarios clases: Planet y Star

--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
-<div class = "main">
-    <div class = "title">
-        <h1><span class="badge badge-none" style="color: white">The Planets</span></h1>
+<div class="jumbotron jumbotron-fluid" style="margin-top: 25px;">
+    <div class="container">
+        <h1 class="display-4"> The Planets</h1>
+        <p class="lead">Esta es una página para el curso de Everis.</p>
     </div>
-
 </div>
