--- a/Frontend/src/app/components/navbar/navbar.component.html
+++ b/Frontend/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-light bg-light" routerLinkActive="active" style=" margin: 0%; padding: 0%;">
     <div class="form-group row" id="navbarSupportedContent" style=" margin: 0%; padding: 0%; margin-left: 15px;">
         <!-- Logo -->
-        <a class="nav-link" style="margin: 0%; padding: 0%;" [routerLink]="['home']" (click)="setDir_titulo('home')">
+        <a class="nav-link" style="margin: 0%; padding: 0%;" [routerLink]="['']" (click)="setDir_titulo('home')">
           <span class="mat-button-focus-overlay"  >
             <img _ngcontent-c1="" alt="angular" class="docs-angular-logo" src="https://icon-icons.com/icons2/510/PNG/48/planet_icon-icons.com_50069.png">
           </span>
@@ -9,7 +9,7 @@
         <!-- Links -->
           <ul ul class="nav">
             <li class="nav-item">
-              <a class="nav-link" style = "margin: 10px 0.7% 0px 0.7%; padding: 0%;" [routerLink]="['./home']" (click)="setDir_titulo('home')"><span class="badge badge-light">Home</span></a>
+              <a class="nav-link" style = "margin: 10px 0.7% 0px 0.7%; padding: 0%;" [routerLink]="['']" (click)="setDir_titulo('home')"><span class="badge badge-light">Home</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" style = "margin: 10px 0.7% 0px 0.7%; padding: 0%;" [routerLink]="['/list-planet/']" (click)="setDir_titulo('list-planet')"><span class="badge badge-light">List Planets</span></a>
