--- a/Frontend/src/app/components/list-planet/list-planet.component.html
+++ b/Frontend/src/app/components/list-planet/list-planet.component.html
@@ -16,7 +16,7 @@
             <tr>
                 <th scope="col">Id</th>
                 <th scope="col">Name</th>
-                <th scope="col">Density</th>
+                <th scope="col">Size</th>
                 <th scope="col">Star</th>
                 <th scope="col" style="text-align: right;">Actions</th>
                 <th></th>
